[package]
name = "rclock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfonts = "1.1.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
clap = { version = "4.0.0", features = ["derive"] }
termion = "4.0.0"
termios = "0.3"
textwrap = "0.16.1"

